[FIX] Code overlapping

--- a/src/renderer/template/misc.css
+++ b/src/renderer/template/misc.css
@@ -358,13 +358,6 @@ strong {
   font-weight: 600 !important;
 }
 
-.editor.preview p code,
-.editor.preview li code,
-.editor.preview table code {
-  /* background-color: rgba( 27, 31, 35, .05 ) !important; */
-  padding: .2em .4em !important;
-}
-
 .editor.preview input[type="checkbox"] {
   width: auto !important;
 }
